# siem-playbook

./: README.md  ansible.cfg  pyproject.toml
inventory/aws/: hosts
inventory/aws/group_vars/: splunk.yml
inventory/dev/: hosts
inventory/test/: hosts
inventory/test/group_vars/: kafka.yml  splunk.yml
inventory/test1/: hosts
inventory/test1/group_vars/: kafka.yml  zookeeper.yml
inventory/test2/: hosts
inventory/test2/group_vars/: kafka.yml
playbooks/: kafka.yml  splunk.yml  zookeeper.yml
siem/kafka/: README.md  galaxy.yml
siem/kafka/roles/kafka-binary-install/defaults/: main.yml
siem/kafka/roles/kafka-binary-install/tasks/: main.yml
siem/kafka/roles/kafka-certificate-install/defaults/: main.yaml
siem/kafka/roles/kafka-certificate-install/files/: rootCA.key  rootCA.pem
siem/kafka/roles/kafka-certificate-install/tasks/: main.yml
siem/kafka/roles/kafka-config-update/defaults/: main.yml
siem/kafka/roles/kafka-config-update/tasks/: main.yml
siem/kafka/roles/kafka-config-update/templates/: server.properties
siem/kafka/roles/kafka-install-binary/defaults/: main.yml
siem/kafka/roles/kafka-install-binary/tasks/: main.yml
siem/splunk/: README.md  galaxy.yml
siem/splunk/roles/splunk-binary-install/defaults/: main.yml
siem/splunk/roles/splunk-binary-install/tasks/: main.yml
siem/splunk/roles/splunk-binary-uninstall/tasks/: main.yml
siem/splunk/roles/splunk-cert-install/tasks/: main.yml  pki.yml  self_sign.yml
siem/splunk/roles/splunk-common-setup/tasks/: main.yml
siem/zookeeper/: README.md  galaxy.yml
tests/: test_siem_playbook.py
(+13 files in other folders)
